fix text-align

--- a/L19/hw2/style.css
+++ b/L19/hw2/style.css
@@ -10,7 +10,7 @@
   color: #fff;
   text-transform: uppercase;
   line-height: 100px;
-  text-align: center;
+  /* text-align: center; */
   position: absolute;
   left: calc(50vw - 100px);
   animation: down 2s;
